--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Online Support</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="root"></div>
