--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/70d1bd69fd.js" crossorigin="anonymous"></script>
   </body>
 </html>
