--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,15 @@
     />
     <title>Online Support</title>
     <link rel="stylesheet" href="style.css">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+/>
+
   </head>
   <body>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/70d1bd69fd.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </body>
 </html>
