--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Online Support</title>
+    <title>Online Shop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./image/super-sale.png">
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
 
   </head>
-  <body>
+  <body class="">
     <div id="root"></div>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
     <script src="https://kit.fontawesome.com/70d1bd69fd.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </body>
